﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* Performance improvements.


~~~~~~~~~
+ v7.1.0:
~~~~~~~~~

+ KGySoft.Drawing.Wpf namespace
===============================
+ BitmapSourceExtensions class:
  + New GetReadableBitmapData overload with WorkingColorSpace parameter.
+ WriteableBitmapExtensions class:
  + New GetWritableBitmapData overload with WorkingColorSpace parameter.
  + New GetReadWriteBitmapData overload with WorkingColorSpace parameter.


~~~~~~~~~
+ v7.0.0:
~~~~~~~~~

+ KGySoft.Drawing.Wpf namespace
===============================
+ New BitmapSourceExtensions class:
  + New GetReadableBitmapData method: to get an IReadableBitmapData data for all pixel formats.
  + New ConvertPixelFormat/BeginConvertPixelFormat/EndConvertPixelFormat/ConvertPixelFormatAsync methods
+ New WriteableBitmapExtensions class:
  + New GetWritableBitmapData method: to get an IWritableBitmapData data for all pixel formats.
  + New GetReadWriteBitmapData method: to get an IReadWriteBitmapData data for all pixel formats.
+ New PixelFormatExtensions class
  + New GetInfo method
  + New ToKnownPixelFormat method
  + New IsIndexed method
  + New GetMatchingQuantizer method
  + New ToPixelFormat method
+ New ReadableBitmapDataExtensions class
  + New ToWriteableBitmap/BeginToWriteableBitmap/EndToWriteableBitmap/ToWriteableBitmapAsync methods
+ New ColorExtensions class